fix for viewport problem on mobile

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -14,6 +14,7 @@ html {
   --dk-background: #333;
   --divider: #d1d5db;
   --detail: #e31b6d;
+  --vh: 1vh;
 
   font-family: Raleway, sans-serif;
   line-height: 1.5;
@@ -79,7 +80,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  block-size: calc(100vh - 2em);
+  block-size: calc(calc(var(--vh, 1vh) * 100) - 2em);
   inline-size: calc(100% - 2em);
   padding: 1em;
 }
